force-app/main/default/objects/AI_Scheduled_Run__c/AI_Scheduled_Run__c.object-meta.xml
<CustomObject>
    <label>Scheduled Run</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Run #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>