force-app/main/default/objects/AI_Scheduled_Run__c/fields/Completed_Records__c.field-meta.xml
<CustomField>
    <fullName>Completed_Records__c</fullName>
    <formula>Processed_Records__c + Disqualified_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>