force-app/main/default/objects/AI_Scheduled_Run__c/fields/Current_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Retry_Count__c</fullName>
    <label>Current Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>