force-app/main/default/objects/AI_Scheduled_Run__c/fields/Errored_Records__c.field-meta.xml
<CustomField>
    <fullName>Errored_Records__c</fullName>
    <label>Errored Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>