force-app/main/default/objects/AI_Scheduled_Run__c/fields/InProgress_Records__c.field-meta.xml
<CustomField>
    <fullName>InProgress_Records__c</fullName>
    <label>In Progress Records</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>