force-app/main/default/objects/AI_Scheduled_Run__c/fields/Job_Ids__c.field-meta.xml
<CustomField>
    <fullName>Job_Ids__c</fullName>
    <label>Job Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>