force-app/main/default/objects/AI_Scheduled_Run__c/fields/Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Scheduler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduler</label>
    <referenceTo>AI_Scheduler__c</referenceTo>
    <relationshipLabel>Scheduled Runs</relationshipLabel>
    <relationshipName>Scheduled_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>